--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
     <div class="first_container">
         <div class="carousel-container">
             <div class="carousel-wrapper" id="carouselWrapper">
-                <div class="carousel-card"><img src="/img/1.jpg" alt=""></div>
-                <div class="carousel-card"><img src="/img/2.jpg" alt=""></div>
+                <div class="carousel-card"><img src="/1.jpg" alt=""></div>
+                <div class="carousel-card"><img src="2.jpg" alt=""></div>
                 <div class="carousel-card"><img src="/img/3.jpg" alt=""></div>
                 <div class="carousel-card"><img src="/img/4.jpg" alt=""></div>
                 <div class="carousel-card"><img src="/img/5.jpg" alt=""></div>
