--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
         <div class="carousel-container">
             <div class="carousel-wrapper" id="carouselWrapper">
                 <div class="carousel-card"><img src="/1.jpg" alt=""></div>
-                <div class="carousel-card"><img src="2.jpg" alt=""></div>
-                <div class="carousel-card"><img src="/img/3.jpg" alt=""></div>
+                <div class="carousel-card"><img src="2.JPG" alt=""></div>
+                <div class="carousel-card"><img src="./img/3.JPG" alt=""></div>
                 <div class="carousel-card"><img src="/img/4.jpg" alt=""></div>
-                <div class="carousel-card"><img src="/img/5.jpg" alt=""></div>
+                <div class="carousel-card"><img src="img/5.JPG" alt=""></div>
                 <!-- Add more cards as needed -->
             </div>
             <div class="first" onclick="firstSlide()"></div>
