--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
             box-shadow: 5px 2px 2px rgb(158, 157, 157);
             margin: 10px 0;
             cursor: pointer;
+            color:black;
         }
         
         
@@ -294,11 +295,11 @@
     <div class="first_container">
         <div class="carousel-container">
             <div class="carousel-wrapper" id="carouselWrapper">
-                <div class="carousel-card"><img src="./img/3.JPG" alt=""></div>
-                <div class="carousel-card"><img src="./img/3.JPG" alt=""></div>
-                <div class="carousel-card"><img src="./img/3.JPG" alt=""></div>
-                <div class="carousel-card"><img src="./img/4.JPG" alt=""></div>
-                <div class="carousel-card"><img src="./img/5.JPG" alt=""></div>
+                <div class="carousel-card"><img src="./img/1.jpg" alt=""></div>
+                <div class="carousel-card"><img src="./img/2.jpg" alt=""></div>
+                <div class="carousel-card"><img src="./img/3.jpg" alt=""></div>
+                <div class="carousel-card"><img src="./img/4.jpg" alt=""></div>
+                <div class="carousel-card"><img src="./img/5.jpg" alt=""></div>
                 <!-- Add more cards as needed -->
             </div>
             <div class="first" onclick="firstSlide()"></div>
