--- a/index.html
+++ b/index.html
@@ -287,6 +287,11 @@
             .container_label p{
                 font-size: 20px;
             }
+            .radio_line_1 p, .radio_line_2 p{
+                
+                left: 72%;
+                
+            }
           }
     </style>
     <title>Simple Carousel</title>
